--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>the flower house</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- ____________________________________________________navbar__________ -->
+     <div>
+        
+     </div>
+    <!-- _____________________________________hero section_____________________ -->
+    <div class="banner">
+        <div class="slider" style="--quantity: 10">
+            <div class="item" style="--position:1"><img src="imagesofflower/aamyr-peN6l68AWaw-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:2"><img src="imagesofflower/agustin-gunawan-rroWmipySwA-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:3"><img src="imagesofflower/amy-humphries-S5wUMrXdq1M-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:4"><img src="imagesofflower/anthony-melone-W6zVhDL_ijg-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:5"><img src="imagesofflower/ranurte-LB3wSllhBq0-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:6"><img src="imagesofflower/rikonavt-oEWdQsbRVZk-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:7"><img src="imagesofflower/ryunosuke-kikuno-cFxUZ7UAf-c-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:8"><img src="imagesofflower/paul-green-5lRxNLHfZOY-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:9"><img src="imagesofflower/zoltan-tasi-yanhwFwyoaU-unsplash.jpg" alt="flowers"></div>
+            <div class="item" style="--position:10"><img src="imagesofflower/mio-ito-B_SLtmXPKNA-unsplash.jpg" alt="flowers"></div>
+        </div>
+       <div class="content">
+        <h1>
+            flowers hold <br>memories
+        </h1>
+        </div>
+        </div>
+        <div class="model"></div>
     
 </body>
+
 </html>
